Fix Flavor Detail tbl in legacy Launch Instance
This patch fixes the misaligned rows of the Flavour Details table, on
the first tab of the legacy Launch Instance workflow.

Patch also changes the markup for the Networks tab, which relied on CSS
that this patch removes.

Closes-Bug: 1443322

--- a/openstack_dashboard/static/dashboard/scss/components/_workflow.scss
+++ b/openstack_dashboard/static/dashboard/scss/components/_workflow.scss
@@ -6,10 +6,6 @@
     padding-top: 10px;
   }
 
-  td {
-    vertical-align: top;
-  }
-
   fieldset > table {
     margin-bottom: 0;
   }
